# LED

./: .gitignore  HANDOFF-S9.md  HANDOFF.md  LED-PLAN.md  OPTION-F-PROGRESS.md  README.md  SENDER-WALL-RECOMMENDATION.md  SETUP.md  THIRD_PARTY.md  bringup_test.py  colorlight_stock_test.py  config_sender.py  config_sender_v2.py  detect_5a75e.py  nic_reset.sh  pyproject.toml  save_probe.py
.claude/: settings.local.json
colorlight_5a-75e_artnet/: .gitignore  6bit_to_6bit_gamma.mem  6bit_to_8bit_gamma.mem  Makefile  README.md  bit_to_flash.py  bit_to_svf.py  build.sh  build_liteeth_core.sh  clocks.py  colorlight.lpf  config.vh  config_panel.py  hub75_driver.v  ledpanel.v  liteeth.yml  liteeth_core.lpf  liteeth_core.tcl  liteeth_core.v  openocd.cfg  phy_io.v  pll.v  pll_generated.v  send_artnet.py  setup_route.bat  syn.ys  top.bit  top.lpf  top.v  udp_panel_writer.v  update_files.py  update_pll.py
re/: data_emu.txt
re/config_files/General Parameters(Fullcolor)/: 1- full-color static eight rows and eight columns.rcvp  10- full-color four scan two rows and eight columns type Z1.rcvp  11- full-color four scan two rows and eight columns type Z2.rcvp  12- full-color four scan two rows and eight columns type Z3.rcvp  13- full-color four scan two rows and eight columns type Z4.rcvp  14- full-color eight scan.rcvp  15- full-color eight scan not split type 1.rcvp  16- full-color eight scan not split type 2.rcvp  17- full-color eight scan two rows and eight columns type U1.rcvp  18- full-color eight scan two rows and eight columns type U2.rcvp  19- full-color eight scan two rows and eight columns type U3.rcvp  2- full-color static eight rows and sixteen columns.rcvp  20- full-color eight scan two rows and eight columns type U4.rcvp  21- full-color eight scan two rows and eight columns type Z1.rcvp  22- full-color eight scan two rows and eight columns type Z2.rcvp  23- full-color eight scan two rows and eight columns type Z3.rcvp  24- full-color eight scan two rows and eight columns type Z4.rcvp  25- full-color sixteen scan.rcvp  26- full-color thirty-two scan.rcvp  3- full-color static four rows and four columns.rcvp  4- full-color two scan four rows and eight columns no 138 chip.rcvp  5- full-color four scan not split type 1.rcvp  6- full-color four scan two rows and eight columns type U1.rcvp  7- full-color four scan two rows and eight columns type U2.rcvp  8- full-color four scan two rows and eight columns type U3.rcvp  typecfg.xml  (+1 more)
re/emu/: data_emu.vhd  gen_capture.py  gen_capture2.py  gen_dests.json  harness.py  records.json  send_records.json
re/emu/sections/: sec_000000_2ffeaab8.txt  (+20 more)
re/wine/: boot_prefix.sh  cap.c  cap2.c  h1.c  h2.c  h3.c  h32.c  h4.c  hwp.c  launch_ledsetting.sh  launch_ledvision.sh  pcaptest.c  pcaptest2.c  probe.c  run_h3.sh  run_h32.sh  run_h4.sh  run_ledvision.sh  run_probe.sh  x99_up.sh
scripts/: git_setup.sh
